@@ -8,6 +8,8 @@ Changelog
   [Dylan Jay]
 - Fix tests for 4.1-5.2
   [Dylan Jay]
+- Add an option to display the result count on a listing view.
+  [instification]
 - fix typos and update 'Working Examples'
   [Kaif Khan]
 
